# SSIMP_pc

./: .gitignore  CMakeLists.txt  CMakeLists.txt.qtds  CMakeLists.txt.user.b3f6655  CMakeLists.txt.user.fa657de  README.md  SSIMP_pc_en_US.ts  SSIMP_pc_zh_CN.ts  json.json
.cache/clangd/index/: aes.cpp.58C83326D150FA5E.idx  aes.h.17A2AD7B17CC1066.idx  global.h.2F21154CC03B5BFA.idx  main.cpp.5FE50A9A135ED17D.idx  netbase.cpp.CC5DB17B771F8454.idx  netbase.h.3F1F725290953D3E.idx  nget.cpp.A3EA6DA8B843AF2F.idx  nget.h.F0E8F9D23D1EC5A9.idx  npost.cpp.8BA7E5A45247B158.idx  npost.h.2CCD7677BE2EC0F5.idx  rsa.cpp.F147EC1636054036.idx  rsa.h.50589D84D6BEFE10.idx  security.cpp.6EC86B2CFA29A280.idx  tcpnetutils.cpp.4CDD999F7598A9E3.idx  tcpnetutils.h.61068F7645163988.idx  verificationcode.cpp.13F68C81DAF40FF6.idx  verificationcode.h.44F4937DF6B11424.idx
Daemon/: daemon.qml  global.h  main.cpp  main.qml  vctrler.cpp  vctrler.h  vctrler.qml
ModeData/: articledata.cpp  articledata.h  attendancedata.cpp  attendancedata.h  employeedata.cpp  employeedata.h  employmodel.cpp  employmodel.h  feedbackdata.cpp  feedbackdata.h  taskdata.cpp  taskdata.h  tasksetdata.cpp  tasksetdata.h
Plugins/: CMakeLists.txt
Plugins/Encrypt_go_binding/: CMakeLists.txt
Plugins/Encrypt_go_binding/libencryptiongo/: CMakeLists.txt  go.mod  main.go
Plugins/include/: libcrypto.h
Plugins/lib/: libcrypto.h
Security/: aes.cpp  aes.h  encryption.cpp  encryption.h  rsa.cpp  rsa.h  security.cpp
Service/: accountservice.cpp  accountservice.h  articleservice.cpp  articleservice.h  attendanceservice.cpp  attendanceservice.h  businessservice.cpp  businessservice.h  employeeservice.cpp  employeeservice.h  entity.h  feedbackservice.cpp  feedbackservice.h  taskservice.cpp  taskservice.h  tasksetservice.cpp  tasksetservice.h
UIFlame/: Menu.ui.qml  MenuModel.qml
UIFlame/AboutPage/: AboutPage.qml  AboutQml.qml  AboutQt.qml  AboutSoftware.qml  AboutUS.qml  OtherOpenSourceProjects.qml
UIFlame/ContentMgrPage/: ContentMgrPage.qml
UIFlame/DataMonitorPage/: DataMonitorPage.qml
UIFlame/DefaultStyle/: Switch.qml  TextArea.qml  TextField.qml
UIFlame/EmployeePage/: EmployeePage.qml
UIFlame/FeedbackPage/: FeedbackPage.qml
UIFlame/GlobalOverviewPage/: GlobalOverviewPage.qml
UIFlame/LoadPage/: LoadPage.qml
UIFlame/LoginPage/: LoginPage.qml
UIFlame/LsKyPage/: LsKyPage.qml
UIFlame/MainPage/: MainPage.qml
UIFlame/Menu/: Menu.qml  Menu.ui.qml  MenuDelegate.qml  MenuDelegate.ui.qml  MenuModel.qml
UIFlame/MessageBox/: MessageBox.qml  MsgButton.qml
UIFlame/TaskPage/: TaskPage.qml
UIFlame/TaskSetPage/: TaskSetPage.qml
Utils/: imgutils.cpp  imgutils.h  netbase.cpp  netbase.h  nget.cpp  nget.h  npost.cpp  npost.h  tcpnetutils.cpp  tcpnetutils.h  verificationcode.cpp  verificationcode.h
resource/: resource.qrc
resource/htmlpage/: contentedit.html  employeeinfo.html  mainscreenview.html  map.html  monitor.html  wangeditor.css
resource/icon/AboutPage/: qmllogo.jpeg~  qtlogo.png~
resource/jsaddon/: file.js
resource/内嵌文档/: aboutqml.md  aboutqt.md  关于我们.md  关于此软件.html  关于此软件.md  其它开源组件.md
